update: [CORE] Fix left menu collapse bug when navigate to my-profile page back and forth

--- a/src/client/core/shared/components/zone/menu/menu.component.scss
+++ b/src/client/core/shared/components/zone/menu/menu.component.scss
@@ -106,6 +106,9 @@
 
 .menuleft-nav-sub {
   display: none;
+  &.active{
+    display: block;
+  }
 }
 
 .menuleft-nav-item {
@@ -155,6 +158,9 @@
         }
       }
     }
+  }
+  &.show {
+  display: block
   }
 }
 
